# bojano-app

./: .env.local.example  .gitignore  .prettierignore  .prettierrc.js  README.md  components.json  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  requirements.txt  tailwind.config.mjs  tsconfig.json
api/: README.md  _app.py  app.py  constants.py  pyproject.toml
api/src/bojano/: __main__.py  config.py  database.py  exceptions.py  sheets.py  utils.py
api/src/bojano/expense_sheets/: exceptions.py  models.py  routes.py  service.py
api/src/bojano/users/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py  service.py
api/src/bojano/users/properties/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py  service.py
api/src/bojano/users/properties/expenses/: models.py  routes.py  service.py
api/src/bojano/users/properties/reservations/: dependencies.py  exceptions.py  models.py  routes.py  service.py
api/src/bojano/users/properties/spreadsheets/: routes.py
api/src/bojano/users/properties/summaries/: routes.py
api/src/bojano_api/: app.py  constants.py  database.py  errors.py  google_sheets.py  mongodb.py  properties.py  users.py
api/tests/: __init__.py  test_expense_sheet.py  test_properties.py
app/: globals.css  layout.tsx
app/(root)/: layout.tsx  page.tsx
constants/: index.ts
docs/API/: Changelog.md  (+4 more)
lib/: utils.ts
notes/: README.md
scripts/: README.md  migrate.py  requirements.txt
src/: middleware.ts
tests/: test_users.py
types/: index.d.ts
(+88 files in other folders)
