[project]
name = "bojano"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "google-api-python-client==2.151.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "motor==3.6.0",
    "overrides==7.7.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
